# Prototype-Web-RAG

./: main.py  pyproject.toml  requirements.txt
config/: config.yml
research/: research_quaity.ipynb
research/research/: docling.txt  text.txt  text1.txt
src/: cost_estimator.py  data_ingestion.py  graph_compile.py  link_loader.py
